# icepick

python/icepick/: main.py  setup.py
rust/icepick-client/: Cargo.toml
rust/icepick-lib/: Cargo.toml
rust/icepick-server/: Cargo.toml
