[package]
name = "icepicklib"
version = "0.1.0"
authors = ["San Peters jr <p.e.sanders@kpn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "icepicklib"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]